@@ -1,3 +1,10 @@
+2008-08-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+        * tag V00-25-02
+	* OutputModuleDialog: add 'keep triggerTriggerEventWithRefs' to
+	the standard value of the outputCommands parameter of any output
+	module (requested by MZ).
+
 2008-08-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-25-01
